<resources>
    <string name="app_name">Dz Now</string>
    <string name="title_home">Accueil</string>
    <string name="title_for_you">Pour vous</string>
    <string name="title_browse">Parcourir</string>
    <string name="title_bookmarks">Signets</string>
    <string name="title_latest">Dernières actualités</string>
    <string name="button_description_settings">Settings</string>
    <string name="button_bookmarks">Bookmarks</string>
    <string name="title_category">Par catégorie</string>
    <string name="title_source">Par source</string>
    <string name="title_contact" translatable="false">Par contact</string>
    <string name="image_description_cover" translatable="false">Article Cover</string>
    <string name="share_article_title">Partager l\'article</string>
    <string name="share_article_content">Voir cet article:</string>
    <string name="button_show_more">Afficher plus</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="tv_sub_item_title">Bounedjah reçoit le trophée de meilleur buteur du championnat du Qatar,Bounedjah
        reçoit le trophée de meilleur buteur du championnat du Qatar
    </string>
    <string name="tv_sub_item_source">Le Buteur</string>
    <string name="tv_sub_item_date">13/06/2019 09:55</string>
    <string name="tv_sub_item_time">%1$d min de lecture</string>
    <string name="tv_sub_item_content">Contenu de l\'article</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_settings">Settings</string>
    <string name="language_arabic">Arabe</string>
    <string name="language_french">Français</string>
    <string name="skip">skip</string>
    <string name="title_login">Login</string>
    <string name="server_client_id" translatable="false">252296444280-4f8cvbso5p7k6qf7mo0flqsraldrt2ir.apps.googleusercontent.com</string>
</resources>
