<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/img_sub_item"
                android:padding="12dp"
                android:orientation="vertical">
            <ImageView
                    android:id="@+id/img_sub_item"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/cardview_dark_background"
                    android:src="@drawable/ic_launcher_foreground"/>
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tv_sub_item_source"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_sub_item_source"/>
                <TextView
                        android:id="@+id/tv_sub_item_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/tv_sub_item_date"/>
            </RelativeLayout>
            <TextView
                    android:id="@+id/tv_sub_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/tv_sub_item_title"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/tv_sub_item_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_sub_item_time"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>