<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

    <!--TOOLBAR-->
    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/navigation_bottom_height"
                android:background="@color/colorWhite"
                android:theme="@style/LightActionBar"
                app:layout_scrollFlags="scroll|enterAlways|snap"
        >
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24px"
                    android:contentDescription="@string/button_description_settings"
                    style="@style/Widget.AppCompat.ActionButton"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/margin_x2"
                    android:id="@+id/buttonBack"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_settings"
                    style="@style/LightTheme.ToolBarHomeTextTitle"
                    android:layout_gravity="start"
                    android:id="@+id/toolbarTitle"/>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <!--CONTENT-->
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >
            <Button
                    android:id="@+id/buttonArabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_arabic"
            />
            <Button
                    android:id="@+id/buttonFrench"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_french"
            />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>