<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/card_view_category"
>
    <android.support.v7.widget.CardView
            android:id="@+id/coverContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x0_5"
            android:layout_marginEnd="@dimen/margin_x0_5"
            android:layout_marginBottom="@dimen/margin_x1"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="0dp"
    >
        <ImageView
                android:id="@+id/tv_item_cover"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:src="@drawable/placeholder_gray"
                android:background="@color/colorGrayIcons"
                android:contentDescription="@string/image_description_cover"
        />
    </android.support.v7.widget.CardView>


    <ImageButton
            android:id="@+id/buttonStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_star_border_24px"
            android:contentDescription="@string/button_bookmarks"
            style="@style/Widget.AppCompat.ActionButton"
            android:tint="@color/colorWhite"
            android:layout_alignEnd="@id/coverContainer"
            android:layout_alignTop="@id/coverContainer"
    />
    <TextView
            style="@style/BrowseItemTitle"
            android:id="@+id/target_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_source"
            android:layout_alignStart="@+id/coverContainer"
            android:layout_alignBottom="@+id/coverContainer"
            android:layout_marginBottom="@dimen/margin_x2"
            android:layout_marginStart="@dimen/margin_x2"
    />
</RelativeLayout>