<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:card_view="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_x1"
              android:background="@color/colorWhite"
>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x3"
            android:layout_marginBottom="@dimen/margin_x3"
    >

        <android.support.v7.widget.CardView
                android:id="@+id/categoryLogoContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_x2"
                android:layout_marginLeft="@dimen/margin_x2"
                android:layout_marginTop="@dimen/margin_x1"
                android:layout_marginBottom="@dimen/margin_x1"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="0dp"
                android:layout_alignParentStart="true"
        >

            <ImageView
                    android:id="@+id/categoryBackground"
                    android:layout_width="@dimen/margin_x4"
                    android:layout_height="@dimen/margin_x4"
                    android:background="@color/colorWhite"
                    android:src="@drawable/ic_launcher_foreground"
                    android:contentDescription="@string/image_description_cover"
            />

        </android.support.v7.widget.CardView>


        <TextView
                style="@style/CategoryTextTitle"
                android:id="@+id/tv_item_title"
                android:layout_width="match_parent"
                android:text="@string/title_source"
                android:layout_toEndOf="@id/categoryLogoContainer"
                android:layout_height="@dimen/margin_x6"
                android:gravity="center_vertical"
        />

        <ImageButton
                android:id="@+id/buttonStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_star_border_24px"
                android:contentDescription="@string/button_description_settings"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_x2"
        />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewArticles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />


    <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorWhiteBackground"
    />

    <Button
            android:id="@+id/buttonShowMore"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_bottom_height"
            android:text="@string/button_show_more"
            android:background="@color/colorWhite"
            android:textColor="@color/colorBlueReadMore"
    />

</LinearLayout>