<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_x1"
    android:background="@color/colorWhite"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_x1"
        android:layout_marginBottom="@dimen/margin_x1"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/contactLogoContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_x2"
            android:layout_marginLeft="@dimen/margin_x2"
            android:layout_marginTop="@dimen/margin_x1"
            android:layout_marginBottom="@dimen/margin_x1"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="0dp"
            android:layout_alignParentStart="true"
            >

            <ImageView
                android:id="@+id/contactBackground"
                android:layout_width="@dimen/margin_x4"
                android:layout_height="@dimen/margin_x4"
                android:background="@color/colorWhite"
                android:src="@drawable/ic_outline_person_24px"
                android:contentDescription="@string/image_description_cover"
                android:layout_marginVertical="@dimen/margin_x1"
                />

        </android.support.v7.widget.CardView>


        <TextView
            style="@style/CategoryTextTitle"
            android:id="@+id/tv_contact_name"
            android:layout_width="match_parent"
            android:text="@string/title_contact"
            android:layout_toEndOf="@id/contactLogoContainer"
            android:layout_height="@dimen/margin_x3"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/tv_contact_number"
            android:layout_width="match_parent"
            android:text="@string/title_contact"
            android:layout_toEndOf="@id/contactLogoContainer"
            android:layout_height="@dimen/margin_x2"
            android:gravity="center_vertical"
            android:layout_below="@id/tv_contact_name"
            />

        <TextView
            android:id="@+id/tv_contact_email"
            android:layout_width="match_parent"
            android:text="@string/title_contact"
            android:layout_toEndOf="@id/contactLogoContainer"
            android:layout_height="@dimen/margin_x2"
            android:gravity="center_vertical"
            android:layout_below="@id/tv_contact_number"
            />

        <ImageButton
            android:id="@+id/buttonSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_sms_24px"
            android:contentDescription="@string/button_description_settings"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_toStartOf="@id/buttonEmail"
            android:layout_marginVertical="@dimen/margin_x1"
            />

        <ImageButton
            android:id="@+id/buttonEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_email_24px"
            android:contentDescription="@string/button_description_settings"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="@dimen/margin_x1"
            />

    </RelativeLayout>

</LinearLayout>